<resources>
    <string name="app_name">QEntry User</string>
    <string name="text1">Please enter your mobile number &amp; pin</string>
    <string name="text2">If you dont have login details please click on</string>
    <string name="text3">sign up button and enroll yourself.</string>
    <string name="text4">New User?</string>
    <string name="text5">Signup</string>
    <string name="stext">I Accept Terms and Conditions Privacy &amp; Policy.</string>
    <string name="stext2">SIGNUP</string>
    <string name="stext3">Already have an Account?</string>
    <string name="stext1">Login</string>
    <string name="drtext">Property Code</string>
    <string name="drtext1">Prasad Pawar</string>
    <string name="drtext2">(Flat No. 15)</string>
    <string name="drtext3">Sai Apartment</string>
    <string name="drtext4">Project By:</string>
    <string name="drtext5">Wunderkinds Technologies &amp; System [P] Ltd.</string>
    <string name="drtext6">02562-274404</string>
    <string name="drtext7">Property Code :</string>
    <string name="dtext1">Help</string>
    <string name="dtext2">About Us</string>
    <string name="dtext3">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="htext">If you have any queries regarding this</string>
    <string name="htext1">GUESTPASS App please</string>
    <string name="htext2">contact to admin</string>
    <string name="htext3">Prasad Pawar</string>
    <string name="htext4">Sai Apartment</string>
    <string name="htext5">+919999999999</string>
    <string name="htext6">Call Now</string>

    <string name="atext">If you have any queries regarding this</string>
    <string name="atext1">GUESTPASS App please</string>
    <string name="atext2">contact to admin</string>
    <string name="atext3">If you have any queries regarding this</string>
    <string name="atext4">GUESTPASS App please</string>
    <string name="atext5">contact to admin</string>
    <string name="atext6">Back</string>

    <string name="shareqrtxt">Share this QR code or send text to invite guest</string>
    <string name="validitycode">( code valid for next 24 hours. ) </string>

    <string name="delete_dialog">Are you sure you want to delete </string>
    <string name="yes">Yes </string>
    <string name="no">No </string>
    <string name="data_not_delete">Sorry!!! Data Can\'t be Deleted </string>
    <string name="logout_dialog_message">Are you sure you want to Logout </string>
    <string name="please_wait">Please wait</string>
    <string name="guest">GUEST</string>
    <string name="guestPass_Qr_code">This Is your Guestpass Qr code, kindly save it to get access in property, And your code is: </string>
    <string name="guest_name">Guest name</string>
    <string name="date">Date</string>
    <string name="total_guest">Total Guest</string>
    <string name="set_time">Set Time</string>
    <string name="in_time">In Time</string>
    <string name="contact">Contact</string>
    <string name="visite_purpose">Visite Purpose</string>
    <string name="today_s_guest">Today\'s Guest</string>
    <string name="add_new_guest">Add New Guest</string>
    <string name="enter_guest_mobile_number">Enter Guest Mobile Number</string>
    <string name="known_guest">Known Guest</string>
    <string name="unknown_guest">Unknown Guest</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="visit_purpose">Visit Purpose</string>
    <string name="invite_guest">INVITE GUEST</string>
    <string name="opps_no_data_found">OOPS! No Data Found</string>
    <string name="you_can_add_newone">You Can Add Newone!!!!</string>
    <string name="enter_mobile_number">Enter Mobile Number First!!!</string>
    <string name="date_is_missing">Date Is Missing!!</string>
    <string name="time_is_important">Time Is Important!!</string>
    <string name="name_is_remaining">Name Is Remaining!!</string>
    <string name="cannot_find_you_without_address">Can\'t Find You Without Address!!</string>
    <string name="visit_purpose_is_most_important">Visit Purpose Is Must Important!!</string>
    <string name="upcoming_guest">Upcoming Guest</string>
    <string name="login">Login</string>
    <string name="mobile">Mobile</string>
    <string name="pin">Pin</string>
    <string name="please_enter_mobile_number">Please Enter Mobile No.</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="network_error">Network Error</string>
    <string name="ref_code">Ref-Code</string>
    <string name="text_will_be_here">Text will be here</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_pin">Confirm Pin</string>
    <string name="select_flag_first">Select Flat First!!!</string>
    <string name="enter_name_first">Enter Name First!!!</string>
    <string name="enter_email_first">Enter Email First!!!!</string>
    <string name="enter_valid_mobile_number">Enter Valid Mobile Number First!!!</string>
    <string name="enter_pin_first">Enter Pin First!!!</string>
    <string name="enter_confirm_pin_first">Enter Confirm Pin First!!!</string>
    <string name="pin_are_not_matching">Pins are not Matching!!!</string>
    <string name="please_accept_term_and_conditions">Please Accept Terms &amp; Conditions!!!</string>
    <string name="sign_up_successful_you_can_login">Sign Up Successful You can Login Now!!!</string>
    <string name="you_need_to_allow_access_the_permission">You need to allow access the permissions</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_new">Add New</string>
    <string name="guest_bottomsheet">Guest</string>
    <string name="today_s">Today\'s</string>
    <string name="upcoming">Upcoming</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="visit_time">Visit Time :</string>
    <string name="history">History</string>
    <string name="guest_history">Guest History</string>
    <string name="forgot_pin">Forgot Pin ?</string>
    <string name="click_here">Click Here</string>
    <string name="submit">Submit</string>
    <string name="send_the_link_on_your_email">Send the link on your email. Please Check your Email.</string>
    <string name="enter_valid_email">Enter valid email.</string>
    <string name="change_pin">Change Pin</string>
    <string name="current_pin">Current Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="fill_current_pin">Fill Current Pin</string>
    <string name="fill_new_pin">Fill new Pin</string>
    <string name="fill_confirm_pin">Fill Confirm Pin</string>
    <string name="new_pin_and_confirm_pin_same">New Pin and Confirm pin not match</string>
    <string name="pin_change_successful">Pin Change Successful</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="please_give_the_permission">Please give the Permission</string>
    <string name="permission_gallery">Without permission you can\'t open Gallery</string>
    <string name="permission_camera">Without permission you can\'t open Camera</string>
    <string name="alternative_number">Alternative Number (optional)</string>
    <string name="enter_user_id">Enter User ID</string>
    <string name="enter_the_name">Enter the Name</string>
    <string name="enter_the_email">Enter the Email</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="remove">Remove</string>
    <string name="photo">Photo</string>
    <string name="remove_profile_photo">Remove profile photo ?</string>
    <string name="you_cannot_edit_it">You can\'t edit it.</string>
    <string name="chat">Chat</string>

    <string name="msg_select_image">Select image</string>
    <string name="messenger">Messenger</string>
    <string name="view_profile">View Profile</string>
    <string name="messages">Messages</string>
</resources>
