<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    app:cardElevation="3dp"
    app:cardCornerRadius="5dp"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:paddingBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

           <!-- <ImageView
                android:layout_marginTop="10dp"
                android:src="@drawable/help"
                android:layout_width="220dp"
                android:layout_height="120dp" />-->

            <TextView
                android:id="@+id/tvForgotPin"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/color_black484848"
                android:text="@string/forgot_pin" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:drawableLeft="@drawable/ic_envelope"
                android:drawablePadding="10dp"
                android:fontFamily="@font/ubuntu"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColorHint="@color/color_lightGray"
                android:textSize="14sp"
                android:theme="@style/EditText.Green"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>


            <Button
                android:id="@+id/btnForgotPin"
                android:textSize="18sp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:includeFontPadding="false"
                android:textColor="@color/color_white"
                android:background="@drawable/gradd2"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginTop="35dp"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />


        </LinearLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>