<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_graye2e1e1"
    android:clickable="true"
    tools:context="com.wk.guestpass.app.Fragments.ChangePin">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient1"
        android:fitsSystemWindows="true"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">


            <RelativeLayout
                android:id="@+id/rlBack"
                android:layout_width="50dp"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:src="@drawable/ic_backdark" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlLogout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp">

                <ImageView
                    android:id="@+id/logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"

                    android:src="@drawable/ic_power" />

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/ubuntu"
                android:text="@string/edit_profile"
                android:textColor="@color/color_white"
                android:textSize="20dp" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">


            <LinearLayout
                android:id="@+id/llProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:orientation="vertical"
                android:paddingBottom="10dp">


                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/circularImageView"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="13dp"
                        android:src="@drawable/ic_user" />

                    <ImageButton
                        android:id="@+id/ivProfile"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="100dp"
                        android:layout_toRightOf="@id/circularImageView"
                        android:background="@drawable/circle"
                        android:layout_marginLeft="-40dp"/>

                    <ImageView
                        android:id="@+id/visitphoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="122dp"
                        android:clickable="true"
                        android:layout_marginLeft="-17dp"
                        android:layout_toRightOf="@id/circularImageView"
                        android:src="@drawable/camera_white_color" />

                </RelativeLayout>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtUserName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="21dp"
                    android:drawableLeft="@drawable/ic_users1"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/ubuntu"
                    android:hint="@string/name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColorHint="@color/color_lightGray"
                    android:textSize="14sp"
                    android:theme="@style/EditText.Green"
                    />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="21dp"
                    android:drawableLeft="@drawable/ic_phone_call"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/ubuntu"
                    android:hint="@string/phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColorHint="@color/color_lightGray"
                    android:textSize="14sp"
                    android:theme="@style/EditText.Green"
                    android:focusable="false"
                    android:clickable="false"
                    android:longClickable="false"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtAlternativeNumber"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="21dp"
                    android:drawableLeft="@drawable/ic_phone_call"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/ubuntu"
                    android:hint="@string/alternative_number"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColorHint="@color/color_lightGray"
                    android:textSize="14sp"
                    android:theme="@style/EditText.Green" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="21dp"
                    android:drawableLeft="@drawable/ic_envelope"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/ubuntu"
                    android:hint="@string/email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:textColorHint="@color/color_lightGray"
                    android:textSize="14sp"
                    android:theme="@style/EditText.Green" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="21dp"
                    android:background="@drawable/gradd2"
                    android:elevation="0dp"
                    android:fontFamily="@font/ubuntu"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/update"
                    android:textColor="@color/color_white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnChangePin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="21dp"
                    android:background="@drawable/gradd2"
                    android:elevation="0dp"
                    android:fontFamily="@font/ubuntu"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/change_pin"
                    android:textColor="@color/color_white"
                    android:textSize="18sp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/overmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blacktransparent"
        android:clickable="false"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_weight="2" />

        <!--  <pl.droidsonroids.gif.GifImageView
              android:id="@+id/gifImageView"
              android:layout_centerVertical="true"
              android:layout_centerHorizontal="true"
              android:visibility="visible"
              android:src="@drawable/triangles"
              android:layout_width="180sp"
              android:layout_height="180sp"/>
  -->
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/gifImageView"
            style="@style/SpinKitView.CubeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorAccent" />

    </RelativeLayout>

</FrameLayout>